syntax = "proto3";

package user;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "carefree/api/user/v1;user_proto";


service UserService {
  rpc CreateUser(CreateUserRequest) returns (User);
  
  rpc UpdateUser(UpdateUserRequest) returns (User);
  
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);
  
  rpc GetUser(GetUserRequest) returns (User);
}

// 用户结构
message User {
  // 资源名称
  // users/<user_id>
  string name = 1;
  
  // 密码
  string password =10;
  
  // 用户名称
  string display_name = 2;
  
  // 头像
  string avatar_url = 3;
  
  // 用户名
  //
  // 可以修改，用于用户登录，无需验证即可登录。
  string username = 4;
  
  // 邮箱
  //
  // 用于邮箱登录。
  string email = 5;
  
  // 手机号
  //
  // 用于手机号登录。
  string phone_number = 6;
  
  // 创建时间
  google.protobuf.Timestamp create_time = 8;
  
  // 更新时间
  google.protobuf.Timestamp update_time = 9;
}

// 创建用户的请求
message CreateUserRequest {
  // 用户 ID
  string id = 1;

  User user = 2;
}

// 获取用户的请求
message GetUserRequest {
  // 资源名称
  // users/<user_id>
  string name = 1;
}

// 删除用户请求
message DeleteUserRequest {
  // 资源名称
  // users/<user_id>
  string name = 1;
}

// 更新用户请求
message UpdateUserRequest {
  User user = 1;
}
